Fixing layout problems and adding icons to action-bar in chronology

--- a/src/webapp/static/facebookApp/css/main.css
+++ b/src/webapp/static/facebookApp/css/main.css
@@ -691,6 +691,26 @@ input{
             padding-left: 0.5em;
             visibility:hidden;
         }
+        ul#chronology li span.action-bar span{
+            
+        }
+        
+        ul#chronology li span.action-bar span.comment{
+            background:url("/static/common/img/comments.png") no-repeat;
+            padding-left:20px;
+            display: inline-block;
+            height: 16px;
+            line-height: 16px;
+        }
+        ul#chronology li span.action-bar .details{
+            background:url("/static/common/img/details.png") no-repeat;
+            padding-left:20px;
+            display: inline-block;
+            height: 16px;
+            line-height: 16px;
+
+        }
+        
             ul#chronology li .comment-box .action-bar{
                 font-size:1em;
             }
@@ -3117,7 +3137,7 @@ input{
         background-color:white;
     }
 	#suggestion-info p{
-		margin: 0 1em 0.5em;
+		margin: 0 2em 0.5em;
 	}
 	#view-list #suggest_suggestion{
 		background-image:url("/static/common/img/suggestionsx16.png");
